infra/k8s/api.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api
  namespace: autograde
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: hitman99/autograde:v0.2.2
          imagePullPolicy: IfNotPresent
          command:
            - autograde
            - api
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "250m"
      serviceAccount: autograde

---

kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: autograde
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
